Fixing some more layout issues.

--- a/static/global/style.css
+++ b/static/global/style.css
@@ -478,7 +478,7 @@ text-decoration: none;
 .page_item{
   padding: 25px 0 25px 38px;
   border-bottom: dotted 2px #72C445;
-  width: 580px;
+  width: 500px;
   overflow: hidden;
 }
 
@@ -497,6 +497,13 @@ text-decoration: none;
 
 .page_item.last{
   border-bottom: 0;
+}
+
+.credits{
+  padding: 25px 0 25px 38px;
+  border-bottom: dotted 2px #72C445;
+  width: 580px;
+  overflow: hidden;
 }
 
 /* WIZARD */
